--- a/index.html
+++ b/index.html
@@ -8,6 +8,27 @@
     <title>Wordpress</title>
 </head>
 <body>
-    
+    <header>
+
+    </header>
+
+    <main>
+        <div id="head">
+        </div>
+
+        <div id="container">
+            <div></div>
+
+            <div></div>
+
+            <div></div>
+
+            <div></div>
+        </div>
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
