--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
     </header>
 
     <main>
-        <div id="head">
+        <div id="container1">
         </div>
 
-        <div id="container">
-            <div></div>
+        <div id="container2">
+            <div class="head"></div>
 
-            <div></div>
+            <div class="widget1"></div>
 
-            <div></div>
+            <div class="content"></div>
 
-            <div></div>
+            <div class="widget2"></div>
         </div>
     </main>
 
